@@ -130,6 +130,7 @@ Version 0.0.4b (in progress)
 * [Added] Note regarding availability of demo stats.
 * [Tested] No apparent issues while running on nginx.
 * [Fixed] Default sort limit reduced on error logs.
+* [Fixed] Incorrect team names on wildcard standings page.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
